# ai-chat-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: deps.py  main.py
app/api/: __init__.py  chat.py  health.py  rag.py
app/core/: __init__.py  config.py  context.py  exceptions.py  logging.py
app/db/: database.py  models.py
app/infrastructure/: openai_clients.py  redis_pool.py
app/middleware/: request_context.py
app/repositories/: vector_repository.py
app/schemas/: __init__.py  chat.py  rag.py
app/security/: ratelimit.py
app/services/: __init__.py  chunker.py  embeddings.py  history.py  history_builder.py  ingest.py  llm.py  rag.py  reranker.py  retrieval.py  retry_policies.py  tokenizer.py  vectorstore.py
evaluation/: dataset.json  evaluator.py  metrics.py  report.py
scripts/: init_db.py
tests/: conftest.py  test_api_validation.py  test_chunker.py  test_health_live.py  test_history_builder.py  test_metrics.py  test_rate_limit.py  test_request_id.py  test_retry_policies.py
