[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-api"
version = "0.2.0"
description = "Async FastAPI RAG gateway with Redis sessions + pgvector"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.136.1",
    "greenlet>=3.0",
    "openai>=2.34.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "evaluation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
